--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: python-http-server-ingress
 spec:
   rules:
-  - host: your-domain.com
+  - host: py-server.localhost
     http:
       paths:
       - path: /
