--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: python-http-server
-        image: python-http-server:latest
+        image: localhost:32000/py-server:latest
         ports:
         - containerPort: 8000
           name: server
